--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
     "morgan": "~1.9.1",
     "path": "^0.12.7"
