--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "moment-jalaali": "^0.10.0",
     "mongodb": "^6.6.1",
     "morgan": "~1.9.1",
     "path": "^0.12.7"
