--- a/online_shop/package.json
+++ b/online_shop/package.json
@@ -9,6 +9,7 @@
     "buffer": "^6.0.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "moment-jalaali": "^0.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
