--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-fileupload": "^1.5.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "js-cookie": "^3.0.5",
